# one-calendar

./: .gitignore  main.py  pyproject.toml
src/: __init__.py  interface.py  main.py  soup.py  web_ipsa.py
